<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LookForRent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_for_rent">ForRent</string>
    <string name="title_activity_for_sale">ForSale</string>
    <string name="large_text">Large Text</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="search_hint">Search</string>
    <string name="app_label">Hello world!</string>
    <string name="name">Name</string>
    <string name="title_activity_login">Login</string>

    <!-- Login/Account creation screen -->
    <string name="signIn">Sign In</string>
    <string name="submit">Submit</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_forget_parse_password">ForgetParsePassword</string>
    <string name="title_activity_fill_up">FillUp</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add_buildings">AddBuildings</string>

</resources>
