<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#144478" >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:maxLength="15"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPasswordConfirm"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:background="#80000000"
        android:textColor="#FFFFFF"
        android:text="@string/createAccount" />

</RelativeLayout>