<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399FF">

    <EditText
        android:id="@+id/edit_PasswordConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_Password"
        android:layout_below="@+id/edit_Password"
        android:layout_marginTop="33dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_Password"
        android:layout_below="@+id/edit_Username"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_Username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_Email"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:maxLength="15"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_PasswordConfirm"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:background="#80000000"
        android:text="@string/createAccount"
        android:textColor="#FFFFFF" />

</RelativeLayout>